Api + frontend connected

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,15 +15,15 @@
 
     <main class="contenedor">
         <section class="clasificador">
-            <textarea id="texto" placeholder="Escribe una noticia para clasificar..."></textarea>
-            <button id="btn-clasificar">Clasificar</button>
-            <div id="resultado">Aquí aparecerá la categoría</div>
+            <textarea id="texto" placeholder="Share your news!"></textarea>
+            <button id="btn-clasificar">Share</button>
+            <div id="resultado"></div>
         </section>
 
         <section class="historial">
-            <h2>Noticias ingresadas</h2>
+            <h2>News</h2>
             <ul id="lista-noticias">
-                <li>(Vacío por ahora)</li>
+                <li>(Empty)</li>
             </ul>
         </section>
     </main>
